Redpin B2b Test/force-app/main/default/objects/Opportunity/fields/Est_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Est_Annual_Revenue__c</fullName>
    <description>RB-11 - Added to be used on Integrated B2B Opportunities</description>
    <label>Est Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>