Redpin B2b Test/force-app/main/default/objects/Opportunity/fields/Narrative__c.field-meta.xml
<CustomField>
    <fullName>Narrative__c</fullName>
    <description>RB-11 - Added for Integrated B2B Opportunities</description>
    <label>Narrative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>