Redpin B2b Test/force-app/main/default/objects/Opportunity/fields/OpEstimated_Annual_Number_of_FX_Payments__c.field-meta.xml
<CustomField>
    <fullName>OpEstimated_Annual_Number_of_FX_Payments__c</fullName>
    <description>RB-11 - added for B2B project.</description>
    <label>Estimated Annual Number of FX Payments</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>