Redpin B2b Test/force-app/main/default/objects/Opportunity/fields/Oppty_1st_12_Month_Revenue_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Oppty_1st_12_Month_Revenue_Estimate__c</fullName>
    <description>RB-11 - added for B2B project.</description>
    <label>1st 12 Month Revenue Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>