Redpin B2b Test/force-app/main/default/objects/Opportunity/fields/Oppty_Estimated_Annual_FX_Volume__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Estimated_Annual_FX_Volume__c</fullName>
    <description>RB-11 - added for B2B project.</description>
    <label>Estimated Annual FX Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>