Redpin B2b Test/force-app/main/default/objects/Opportunity/fields/Proposal_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Sent_Date__c</fullName>
    <description>RB-11 - Added to be used on Integrated B2B Opportunities</description>
    <label>Proposal Sent Date</label>
    <type>Date</type>
</CustomField>