Redpin B2b Test/force-app/main/default/objects/Opportunity/fields/Technical_Scoping_Complete__c.field-meta.xml
<CustomField>
    <fullName>Technical_Scoping_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RB-11 - Added to be used for Integrated B2B Opportunities</description>
    <label>Technical Scoping Complete</label>
    <type>Checkbox</type>
</CustomField>