Redpin B2b Test/force-app/main/default/objects/Opportunity/recordTypes/Integrated_B2B.recordType-meta.xml
<RecordType>
    <fullName>Integrated_B2B</fullName>
    <active>true</active>
    <businessProcess>B2B</businessProcess>
    <label>Integrated B2B</label>
</RecordType>