Redpin B2b Test/force-app/main/default/objects/Opportunity/listViews/Integrated_B2B_Opportunities.listView-meta.xml
<ListView>
    <fullName>Integrated_B2B_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Integrated_B2B</value>
    </filters>
    <label>Integrated B2B Opportunities</label>
</ListView>